[package]
name = "OMR"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fhe = { git =  "https://github.com/Janmajayamall/fhe.rs.git", branch = "main" }
fhe-util = { git =  "https://github.com/Janmajayamall/fhe.rs.git", branch = "main" }
fhe-traits = { git =  "https://github.com/Janmajayamall/fhe.rs.git", branch = "main" }
fhe-math = { git =  "https://github.com/Janmajayamall/fhe.rs.git", branch = "main" }
rand = "0.8.5"
itertools = "0.10.5"
byteorder = "1.4.3"
rayon = "1.6.0"
bincode = "1.3.3"
statrs = "0.16.0"
ndarray = "0.15.6"
serde = { version = "1.0", features = ["derive"] }