[package]
name = "omr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fhe = "0.1.0-beta.4"
fhe-util = "0.1.0-beta.4"
fhe-traits = "0.1.0-beta.4"
fhe-math = "0.1.0-beta.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
itertools = "0.10.5"
byteorder = "1.4.3"
rayon = "1.6.0"
bincode = "1.3.3"
statrs = "0.16.0"
ndarray = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
protobuf = "3.2.0"
clap = { version = "4.1.4", features = ["derive"] }
quote = "1.0.23"

[patch.crates-io]
fhe = { git =  "https://github.com/Janmajayamall/fhe.rs.git", branch = "simd" }
fhe-util = { git =  "https://github.com/Janmajayamall/fhe.rs.git", branch = "simd" }
fhe-traits = { git =  "https://github.com/Janmajayamall/fhe.rs.git", branch = "simd" }
fhe-math = { git =  "https://github.com/Janmajayamall/fhe.rs.git", branch = "simd" }